# haskell-sdk

./: cabal.project  hie.yaml  stack.yaml
dapr-core/: dapr-core.cabal
dapr-core/src/Dapr/Core/: DaprClient.hs  Types.hs
dapr-core/src/Dapr/Core/Types/: Common.hs  ServiceInvocation.hs
dapr-grpc-client/: dapr-grpc-client.cabal
dapr-grpc-client/src/Dapr/Client/: GrpcClient.hs
dapr-grpc-client/src/Dapr/Client/GrpcClient/: Core.hs  Internal.hs  Utils.hs
dapr-grpc-client/src/Dapr/Proto/Runtime/V1/: DaprClient.hs
dapr-http-client/: dapr-http-client.cabal
dapr-http-client/src/Dapr/Client/: HttpClient.hs
dapr-http-client/src/Dapr/Client/HttpClient/: Core.hs  ServiceInvocation.hs
dapr-proto/: dapr-proto.cabal
dapr-proto/proto/dapr/proto/common/v1/: common.proto
dapr-proto/proto/dapr/proto/runtime/v1/: appcallback.proto  dapr.proto
dapr-proto/src/Dapr/Proto/Common/V1/: Common.hs
dapr-proto/src/Dapr/Proto/Runtime/V1/: Appcallback.hs  Dapr.hs
dapr-proto/src/Google/Protobuf/: Any.hs  Empty.hs  Struct.hs  Timestamp.hs
