cabal-version:      3.0
name:               dapr-proto
version:            0.1.0.0
description:        Please see the README on Github at <https://github.com/nodew/haskell-dapr#readme>
homepage:           https://github.com/nodew/haskell-dapr#readme
bug-reports:        https://github.com/nodew/haskell-dapr/issues
license:            Apache-2.0
license-file:       LICENSE
author:             Qiao Wang
maintainer:         wangqiao11@hotmail.com
copyright:          2022 Qiao Wang
category:           Web
build-type:         Simple
extra-source-files: ChangeLog.md
                  , README.md
                  , proto/**/*.proto
tested-with: GHC == { 9.2.4, 9.0.2, 8.10.7, 8.8.4 }

source-repository head
    type: git
    location: https://github.com/nodew/haskell-dapr

library
    hs-source-dirs: src
    build-depends:
          base >=4.11 && <5
        , bytestring >=0.10.6.0 && <0.12.0
        , containers >=0.5 && < 0.7
        , deepseq ==1.4.*
        , grpc-haskell-core >= 0.5.0
        , grpc-haskell >= 0.3
        , proto3-suite >=0.4.3
        , proto3-wire >=1.2.2
        , text >= 0.2 && <1.3
        , vector >=0.12.0.2 && <0.14
    exposed-modules:
          Google.Protobuf.Any
        , Google.Protobuf.Empty
        , Google.Protobuf.Struct
        , Google.Protobuf.Timestamp
        , Dapr.Proto.Common.V1.Common
        , Dapr.Proto.Runtime.V1.Appcallback
        , Dapr.Proto.Runtime.V1.Dapr
    default-language: Haskell2010

test-suite dapr-proto-test
    build-depends:
          base >=4.11 && <5
        , dapr-proto
        , QuickCheck ^>=2.14.0
        , hspec ^>={ 2.8.5, 2.9.7, 2.10.4 }
        , hspec-core ^>={ 2.8.5, 2.9.7, 2.10.4 }
        , microlens
        , proto-lens ^>=0.7.1
        , proto-lens-runtime ^>=0.7.0
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Spec.hs
    other-modules:
          Proto.Dapr.CommonSpec
        , Paths_dapr_proto
    default-language: Haskell2010
